[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lumen-sdk"
version = "0.4.0"
description = "Lumen SDK: cryptographic ledger verification and Merkle integrity engine"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["lumen*"]
